--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,38 +1,149 @@
-.App {
-  text-align: center;
+body{
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  color: whitesmoke;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 1s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
+  z-index: 22;
+  position: relative;
   display: flex;
+  width: 100%;
+  height: 100%;
+  gap: 100px;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.bg-vid{
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  mix-blend-mode: overlay;
+}
+
+header{
+  display: flex;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
+  background-color: rgba(255, 255, 255, 0.123);
+  backdrop-filter: blur(10px);
+  padding: 0 30px;
+  box-shadow: 0 0 15px #725CAD;
+  z-index: 999;
+}
+
+header ul{
+  display: flex;
+  justify-content: space-between;
+  width: 35%;
+  padding: 15px 30px;
+  border-radius: 50px;
+  background-color: rgba(31, 55, 94, 0.274);
+  backdrop-filter: blur(10px);
+  box-shadow: 0 0 10px #725CAD;
+}
+
+header ul li{
+  list-style: none;
+}
+
+header ul a{
+  text-decoration: none;
   color: white;
+  font-weight: 700;
+  margin: 0 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.topleft{
+  display: flex;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.topleft img{
+  width: 56px;
+  margin: 0 15px;
+}
+
+.box-icons{
+  display: flex;
+  gap: 40px;
+}
+
+.box-icons a{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  width: 30px;
+  height: 30px;
+  border: 2px solid #8CCDEB;
+  text-decoration: none;
+  color: lightgray;
+  border-radius: 50%;
+  transition: 0.3s;
+}
+
+.box-icons a:hover{
+  background-color: #8CCDEB;
+  color: black;
+  box-shadow: 0 0 15px #8CCDEB;
+}
+
+.bh-vid{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  justify-content: center;
+  mix-blend-mode: lighten;
+  margin-top: -23.5%;
+}
+
+.person{
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.person-info{
+  position: absolute;
+  left: 5%;
+}
+
+.person-title{
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+  color: #725CAD;
+  padding: 8px 8px;
+  border: 1px solid #725CAD;
+  width: 170px;
+  background-color: #0b1d516e;
+  box-shadow: 0 0 5px #725CAD;
+  border-radius: 50px;
+}
+
+
+@media (max-aspect-ratio: 16/9){
+  .bg-vid{
+    width: auto;
+    height: 100%;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media (min-aspect-ratio: 16/9){
+  .bg-vid{
+    width: 100%;
+    height: auto;
   }
 }
