--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -14,6 +14,7 @@ body{
   gap: 100px;
   flex-direction: column;
   align-items: center;
+  background-color: #001f7c38;
 }
 
 .bg-vid{
@@ -21,80 +22,7 @@ body{
   right: 0;
   bottom: 0;
   z-index: -1;
-  mix-blend-mode: overlay;
-}
-
-header{
-  display: flex;
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  align-items: center;
-  justify-content: space-between;
-  height: 80px;
-  background-color: rgba(255, 255, 255, 0.123);
-  backdrop-filter: blur(10px);
-  padding: 0 30px;
-  box-shadow: 0 0 15px #725CAD;
-  z-index: 999;
-}
-
-header ul{
-  display: flex;
-  justify-content: space-between;
-  width: 35%;
-  padding: 15px 30px;
-  border-radius: 50px;
-  background-color: rgba(31, 55, 94, 0.274);
-  backdrop-filter: blur(10px);
-  box-shadow: 0 0 10px #725CAD;
-}
-
-header ul li{
-  list-style: none;
-}
-
-header ul a{
-  text-decoration: none;
-  color: white;
-  font-weight: 700;
-  margin: 0 10px;
-}
-
-.topleft{
-  display: flex;
-  align-items: center;
-}
-
-.topleft img{
-  width: 56px;
-  margin: 0 15px;
-}
-
-.box-icons{
-  display: flex;
-  gap: 40px;
-}
-
-.box-icons a{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 20px;
-  width: 30px;
-  height: 30px;
-  border: 2px solid #8CCDEB;
-  text-decoration: none;
-  color: lightgray;
-  border-radius: 50%;
-  transition: 0.3s;
-}
-
-.box-icons a:hover{
-  background-color: #8CCDEB;
-  color: black;
-  box-shadow: 0 0 15px #8CCDEB;
+  mix-blend-mode: lighten;
 }
 
 .bh-vid{
@@ -106,97 +34,50 @@ header ul a{
   margin-top: -23.5%;
 }
 
-.person{
-  position: relative;
-  display: flex;
-  width: 100%;
-  height: 100vh;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.person-info{
+.scroll-down{
+  height: 55px;
+  width: 30px;
+  border: 2px solid lightgray;
   position: absolute;
-  left: 5%;
-}
-
-.person-title i{
-  display: inline-flex;
-  align-items: center;
-  gap: 8px;
-  color: #725CAD;
-  padding: 8px 8px;
-  border: 1px solid #725CAD;
-  width: 170px;
-  background-color: #0b1d516e;
-  box-shadow: 0 0 5px #725CAD;
+  left: 49%;
+  bottom: 8%;
   border-radius: 50px;
-  transition: 0.3s;
-}
-
-.person-title i:hover{
-  border: 1px solid #8CCDEB;
-  color: white;
-  box-shadow: 0 0 15px #8CCDEB;
   cursor: pointer;
-}
-.person-info h1{
-  font-size: 60px;
-  max-width: 700px;
-  font-weight: 700;
-  line-height: 70px;
-  margin-top: 40px;
-  margin-bottom: 10px;
+  box-shadow: 0 0 15px rgb(211, 211, 211, 0.477);
 }
 
-.person-info p{
-  max-width: 650px;
-  line-height: 30px;
-  margin-bottom: 40px;
-  font-size: 20px;
+.scroll-down::before,
+.scroll-down::after{
+  content: '';
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  height: 10px;
+  width: 10px;
+  border: 2px solid lightgray;
+  transform: translate(-50%, -100%) rotate(45deg);
+  border-top: transparent;
+  border-left: transparent;
+  animation: scroll-down 2s ease-in-out infinite;
 }
 
-.person-info button{
-  display: flex;
-  color: white;
-  align-items: center;
-  font-size: 15px;
-  gap: 8px;
-  padding: 10px 25px;
-  border-radius: 10px;
-  border: 1px solid #727fde;
-  background-color: #0b1d516e;
-  box-shadow: 0 0 5px #727fde;
+.scroll-down::before{
+  top: 30%;
+  animation-delay: 0.5s;
 }
 
-.person-info button:hover{
-  border: 1px solid #8CCDEB;
-  color: white;
-  box-shadow: 0 0 15px #8CCDEB;
-  cursor: pointer;
-}
-
-.gradient {
-  background-image: linear-gradient(to right, #008baa, #7e42a7, #6600c5, #6070fd, #2a46ff, #0099ff, #008ead);
-  background-size: 200% auto;
-  background-position: 0% center;
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  color: transparent;
-  animation: animate-gradient 2.5s linear infinite;
-  display: inline-block;
-}
-
-@keyframes animate-gradient {
-  from {
-    background-position: 0% center;
+@keyframes scroll-down {
+  0%{
+    opacity: 0;
   }
-  to {
-    background-position: 200% center;
+  30%, 60%{
+    opacity: 1;
+  }
+  100% {
+    top: 90%;
+    opacity: 0;
   }
 }
-
 
 @media (max-aspect-ratio: 16/9){
   .bg-vid{
