--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -10,7 +10,7 @@ body{
   position: relative;
   display: flex;
   width: 100%;
-  height: 120vh;
+  height: 100%;
   gap: 100px;
   flex-direction: column;
   align-items: center;
@@ -40,7 +40,7 @@ body{
   border: 2px solid lightgray;
   position: absolute;
   left: 49%;
-  bottom: 8%;
+  bottom: 25%;
   border-radius: 50px;
   cursor: pointer;
   box-shadow: 0 0 15px rgb(211, 211, 211, 0.477);
