--- a/portfolio/src/components/About/about.css
+++ b/portfolio/src/components/About/about.css
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   align-items: center;
   justify-content: space-between;
 }
@@ -83,13 +83,15 @@
 }
 
 .picture-of-me{
-  position: absolute;
-  right: 1%;
-  bottom: 20px;
+  position: relative;
+  padding-top: 100px;
+  left: 55%;
+  bottom: -45px;
+  width: 50px;
 }
 
 .picture-of-me img{
-  height: 750px;
+  height: 810px;
   animation: float 3s linear infinite;
 }
 
