--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,6 +1,6 @@
 .info-section{
     width: 50%;
-    margin-top: 60px;
+    margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -12,6 +12,8 @@
 .section-title{
     font-size: 40px;
     font-weight: 700;
+    position: relative;
+    top: 70px;
 }
 
 .info-cards{
@@ -21,6 +23,8 @@
     width: 120%;
     height: 100%;
     margin-top: 30px;
+    position: relative;
+    top: 70px;
 }
 
 .card{
