--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@ body{
   color: whitesmoke;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 .container{
   z-index: 22;
   position: relative;
@@ -34,7 +38,7 @@ body{
   margin-top: -23.5%;
 }
 
-.scroll-down{
+.scroll-down {
   z-index: 50;
   height: 55px;
   width: 30px;
@@ -43,7 +47,8 @@ body{
   bottom: 2%;
   border-radius: 50px;
   cursor: pointer;
-  box-shadow: 0 0 15px rgb(211, 211, 211, 0.477);
+  box-shadow: 0 0 15px rgba(211, 211, 211, 0.477);
+  transition: opacity 0.5s ease;
 }
 
 .scroll-down::before,
@@ -64,6 +69,107 @@ body{
 .scroll-down::before{
   top: 30%;
   animation-delay: 0.5s;
+}
+
+.footer{
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  align-items: center;
+  justify-content: center;
+  height: 70px;
+  background-color: rgb(255, 255, 255, 0.128);
+  backdrop-filter: blur(10px);
+  box-shadow: 0 0 15px rgb(255, 255, 255, 0.356);
+  z-index: 999;
+}
+
+.copyright-logo{
+  color: aqua;
+}
+
+.footer h1{
+  font-size: 25px;
+}
+
+.autoBlur{
+  animation: autoBlurAnimation linear both;
+  animation-timeline: view();
+}
+
+@keyframes autoBlurAnimation {
+  0%{
+    filter: blur(40px);
+    opacity: 0;
+  }
+  35%, 65%{
+    filter: blur(0);
+    opacity: 1;
+  }
+  100%{
+    filter: blur(40px);
+    opacity: 0;
+  }
+}
+
+.autoDisplay{
+  animation: autoDisplayAnimation both;
+  animation-timeline: view();
+}
+
+@keyframes autoDisplayAnimation {
+  from{
+    filter: blur(10px);
+    transform: translateY(-200px) scale(0);
+    opacity: 0.2;
+  }
+  50%{
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0) scale(1);
+  }
+}
+
+.fadeInLeft{
+  animation: fadeInAnimation1 both;
+  animation-timeline: view();
+}
+
+@keyframes fadeInAnimation1{
+  0%{
+    opacity: 0;
+    transform: translateX(500px) scale(0.2);
+  }
+  35%, 65%{
+    opacity: 1;
+    transform: translateX(0px) scale(1);
+    filter: blur(0);
+  }
+  100%{
+    filter: blur(20px);
+  }
+}
+
+.fadeInRight{
+  animation: fadeInAnimation2 both;
+  animation-timeline: view();
+}
+
+@keyframes fadeInAnimation2{
+  0%{
+    opacity: 0;
+    transform: translateX(-500px) scale(0.2);
+  }
+  35%, 65%{
+    opacity: 1;
+    transform: translateX(0px) scale(1);
+    filter: blur(0);
+  }
+  100%{
+    filter: blur(20px);
+  }
 }
 
 @keyframes scroll-down {
