--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -1,152 +1,73 @@
-.info-section{
-    width: 50%;
-    margin-top: 100px;
-    margin-left: auto;
-    margin-right: auto;
+.contact-section{
+    width: 80%;
+    height: 100vh;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    gap: 10%;
     align-items: center;
     position: relative;
 }
 
-.section-title{
-    font-size: 40px;
-    font-weight: 700;
-    position: relative;
-    top: 70px;
+.contact-section h1{
+    position: absolute;
+    top: 10%;
+    left: 40%;
 }
 
-.info-cards{
-    display: grid;
-    grid-template-columns: auto auto auto;
-    gap: 20px;
-    width: 120%;
-    height: 100%;
-    margin-top: 30px;
-    position: relative;
-    top: 70px;
-}
-
-.card{
+.social-box{
     display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    position: relative;
-    width: auto;
-    height: 35vh;
-    bottom: 10%;
-    overflow: hidden;
-    border: 1px solid gray;
-    background-color: #080020b7;
-    border-radius: 20px;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.social-box a{
+    color: lightgray;
+    text-decoration: none;
+    font-size: 20px;
+    text-wrap: nowrap;
+}
+
+.social-box i{
+    color: #727fde;
+    font-size: 30px;
+    margin-right: 10px;
+}
+
+.contact-box p{
+    max-width: 400px;
+    margin-top: 30px;
+    margin-bottom: 5px;
+}
+
+.contact-box input{
+    padding: 7.5px 30px;
+    background-color: lightgray;
+    width: 80%;
+    height: 25px;
+    border: none;
+    outline: none;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.contact-box button {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    background-color: #2200493d;
+    border: 1px solid #727fdeb4;
+    box-shadow: 0 0 5px #727fdeb4;
+    color: white;
+    gap: 8px;
+    margin-top: 30px;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
     transition: 0.3s;
 }
 
-.card:hover{
-    box-shadow: 0 0 15px rgba(211, 211, 211, 0.5);
-}
-
-.card:nth-child(3){
-    grid-row: span 2;
-    height: 72vh;
-    bottom: 30px;
-}
-
-.card:nth-child(3) p{
-    bottom: 1%;
-}
-
-.card:nth-child(3) h1{
-    bottom: 2%;
-}
-
-.card:nth-child(4){
-    grid-column: span 2;
-}
-
-.card:nth-child(4)P{
-    max-width: 650px;
-}
-
-.card:nth-child(4) h1{
-    bottom: 35%;
-}
-
-.card img{
-    width: 50%;
-    height: 50%;
-    object-fit: cover;
-}
-
-.card h1{
-    position: absolute;
-    margin: 0;
-    bottom: 40%;
-    left: 5%;
-    font-size: 25px;
-    z-index: 1;
-    color: lightgray;
-}
-
-.card p{
-    position: absolute;
-    bottom: 3%;
-    left: 5%;
-    z-index: 1;
-    max-width: 93%;
-    color: gray;
-    font-size: 12px;
-    line-height: 20px;
-}
-
-.card h1.time{
-    margin-bottom: -37px;
-}
-
-.card img.card-face{
-    width: 240px;
-    height: auto;
-    margin-top: 30px;
-    margin-left: 5%;
-    border-radius: 10px;
-    opacity: 55%;
-    transition: opacity 2s ease;
-}
-
-.card:hover img.card-face{
-    opacity: 100%;
-}
-
-.card h1.time{
-    margin-bottom: 0px;
-    right: 10px;
-}
-
-.card h1.greet{
-    margin-bottom: 50%;
-    right: 10px;
-}
-
-.card h1.stack{
-    margin-bottom: 0px;
-}
-
-.card h1.techie{
-    margin-bottom: 55px;
-}
-
-.card img.tech-stack{
-    height: 70%;
-}
-
-.card img.tech-enjoyer{
-    height: 70%;
-}
-
-.card video{
-    margin-top: 5%;
-    width: 70%;
-    height: 60%;
-    object-fit: scale-down;
-    mix-blend-mode: lighten;
+.contact-box button:hover {
+    box-shadow: 0 0 15px #727fdeb4;
+    opacity: 0.7;
 }
